# MLNlite

./: .gitignore  README.md  build.gradle  settings.gradle
HotReload/: build.gradle
HotReload/src/main/: AndroidManifest.xml
HotReload/src/main/proto/: PBBaseCommand.proto  PBGetCodeRequest.proto  PBGetCodeResponse.proto
HotReload_Adapter/: build.gradle
HotReload_Empty/: build.gradle
app/: build.gradle
app/src/androidTest/java/com/autolua/mln_lite/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/gallery/json/: fashion.json  musicRank.json
app/src/main/assets/inner_demo/: EditTextViewDemo.lua
app/src/main/res/back/values/: strings.xml  themes.xml
app/src/main/res/back/values-night/: themes.xml
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
mlncore/: build.gradle
mlncore/src/main/cpp/: CMakeLists.txt
mlncore/src/main/cpp/japi/: cache.c  signal_try_catch.c  signal_try_catch.h  statistics_require.c
mlnservice/: build.gradle  lint-baseline.xml  proguard-rules.pro
mlnservice/src/main/: AndroidManifest.xml
mlnservice/src/main/cpp/: CMakeLists.txt
mlnservice/src/main/cpp/mln/: CMakeLists.txt
mlnservice/src/main/cpp/mln/independent/: CMakeLists.txt
mlnservice/src/main/res/layout/: layout_setting_view.xml
processor/: build.gradle
scan/: build.gradle
scan/src/main/: AndroidManifest.xml
scan/src/main/res/layout/: camera.xml
scan/src/main/res/menu/: capture.xml  encode.xml  history.xml
scan/src/main/res/values/: strings.xml
(+104 files in other folders)
