cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/../libs/${ANDROID_ABI})
set(MLN_CORE_SRC  ${PROJECT_SOURCE_DIR}/../../../../mlncore/src)
set(LINK_LIBRARY_DIRECTORY ${MLN_CORE_SRC}/main/libs/${ANDROID_ABI}/)
set(LUA_INCLUDE_DIRECTORY ${MLN_CORE_SRC}/main/cpp/lua)

#添加子目录，将自动找到子目录中的CMakeLists.txt
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/bitmap)
#ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/anim)
ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/mln)

